# KPO-HW2

./: .env.example  .gitignore  README.md  docker-compose.yml
API Gateway/: Dockerfile  config.yaml  pyproject.toml
API Gateway/src/: main.py
API Gateway/src/models/: analysis.py  files.py
API Gateway/src/utils/: config.py  proxy.py
Analisys service/: Dockerfile  config.yaml  pyproject.toml
Analisys service/migrations/: env.py
Analisys service/migrations/versions/: e7d54e2c8993_init.py
Analisys service/src/: main.py
Analisys service/src/utils/: config.py
Analisys service/tests/test_application/: test_analysis_service.py
Store service/: alembic.ini  config.yaml  pyproject.toml
Store service/migrations/: env.py
Store service/migrations/versions/: 4063bd377566_init.py
Store service/src/: main.py
Store service/src/application/services/: file_service.py
Store service/src/domain/interfaces/: base_repository.py  file_repository.py  storage.py
Store service/src/domain/schemas/: file.py
Store service/src/infrastructure/database/: db_context.py
Store service/src/infrastructure/database/models/: file.py
Store service/src/infrastructure/database/repositories/: files.py
Store service/src/infrastructure/storage/: local_storage.py  minio_storage.py
Store service/src/presentation/API/: files.py
Store service/src/presentation/dependencies/: sevices.py
Store service/src/utils/: config.py
Store service/tests/test_infrastructure/: test_FileService.py  test_MinioFileStorage.py  test_SQLFileRepository.py
(+22 files in other folders)
