[project]
name = "api_gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "zxcdebil MB",email = "mishany1105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "api gateway", from = "src"}]


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
